--- a/src/Banner.css
+++ b/src/Banner.css
@@ -3,10 +3,23 @@
     padding:0;
 }
 
+.banner1{
+    height: 70vh;
+    width: 100vw;
+    background-size: cover;}
+    
+.banner{
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+
+}
+
+
 .banner__image{
     width: 100%;
     height: 40%;
-    mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+   
     margin-top: 0px;
 }
 
@@ -72,4 +85,30 @@
 .intro{
     color: white;
     font-size: 10px;
+}
+
+@media (max-width:1100px){
+    .banner>h1{
+        color: white;
+        position: absolute;
+        left: 4.6vw;
+        top: 35vh;
+        font-size: 10vh;
+        font-weight: 700;
+    }
+}
+
+
+@media (max-width:750px){
+    .banner>h1{
+        color: white;
+        position: absolute;
+        left: 4.6vw;
+        top: 38vh;
+        font-size: 5vh;
+        font-weight: 700;
+    }
+    .intro__container{
+        width: 80vw;
+    }
 }
