--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -14,7 +14,31 @@
     justify-content: space-around;
     padding-top: .5rem;
     position: absolute;
+    position: fixed;
+    top: 0;
     z-index: 1;
+}
+.search{
+    display: flex;
+    align-items: center;
+}
+
+.searchInput{
+    height: 25px;
+    /* width: 100%; */
+    padding-left: 31px;
+    background-color: black;
+    /* padding: 1px; */
+    outline: none;
+    color: white;
+    border: 1px red solid;
+    border-radius: 42px;
+}
+.searchIcon{
+    margin-right: -30px;
+    margin-top: 2px;
+    color: red;
+    z-index: 10;
 }
 
 .navbar__logo{
@@ -30,4 +54,50 @@
 
 .navbar>span:hover{
     transform: scale(1.02);
+}
+.navbarBottom{
+    display: none;
+}
+.mobile{
+    display: none;
+}
+
+@media (max-width:690px){
+  
+     .navbar{
+         display: none;
+     }
+
+    .navbarBottom{
+        display: flex;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        font-size: 0.8rem;
+        color: rgba(255, 255, 255,0.7);
+        display: flex;
+        align-items: center;
+        width: 100%;
+        z-index: 100;
+        background: linear-gradient(180deg,rgba(0,0,0,1) 0% ,rgba(4, 4, 4, 0.77634803));
+        justify-content: space-around;
+        padding: 10px 0;
+
+    }
+    .mobile{
+        display: flex;
+        position: fixed;
+        top: 0;
+    }
+    .navbarBottom div{
+       
+       
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 40px;
+        justify-content: space-between;
+        color: rgba(255, 255, 255,0.7);
+    }
+
 }
